Fix links were not clickable because of overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -93,6 +93,7 @@ $form-group-margin-bottom: 30px !default;
         hsla(random() * 360, 100%, 50%, 0.9);
   }
   text-shadow: $text-shadow;
+  z-index: -1;
 }
 
 // Import
@@ -121,7 +122,6 @@ body {
   background: $brand-bg-color;
   height: 100%;
   position: relative;
-
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
